apps/applications/tools/it-tools/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: it-tools
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: it-tools
  template:
    metadata:
      labels:
        app: it-tools
        networking/expose-web-ui: "true"
    spec:
      containers:
        - name: it-tools
          image: ghcr.io/corentinth/it-tools
          ports:
            - name: web-ui
              containerPort: 80
          resources:
            requests:
              cpu: 10m
              memory: 64Mi
            limits:
              cpu: 100m
              memory: 128Mi
