apps/applications/tools/it-tools/http-route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: it-tools-route
  namespace: default # Where your application is deployed
spec:
  parentRefs:
    - name: internal-gateway
      namespace: traefik
  hostnames:
    - "tools.kerrlab.app"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: it-tools-ui
          port: 80
