apps/applications/tools/it-tools/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: it-tools-policy
  namespace: default
spec:
  endpointSelector:
    matchLabels:
      app: it-tools
